WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
116050
Sometimes NSUndoManager can get into an inconsistent state
https://bugs.webkit.org/show_bug.cgi?id=116050
Summary
Sometimes NSUndoManager can get into an inconsistent state
Ryosuke Niwa
Reported
2013-05-13 11:29:26 PDT
To fix <
rdar://problem/12169595
>, we need to work around the bug in NSUndoManager.
Attachments
Fixes the bug
(3.27 KB, patch)
2013-05-13 11:33 PDT
,
Ryosuke Niwa
buildbot
: owner-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion
(482.94 KB, application/zip)
2013-05-13 12:39 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-05-13 11:33:36 PDT
Created
attachment 201584
[details]
Fixes the bug
Build Bot
Comment 2
2013-05-13 12:39:40 PDT
Comment on
attachment 201584
[details]
Fixes the bug
Attachment 201584
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/451877
New failing tests: fast/table/table-rowspan-height-distribution-in-rows.html editing/undo/undo-iframe-location-change.html
Build Bot
Comment 3
2013-05-13 12:39:41 PDT
Created
attachment 201623
[details]
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.2
Ryosuke Niwa
Comment 4
2013-05-13 13:07:25 PDT
Committed
r150034
: <
http://trac.webkit.org/changeset/150034
>
Darin Adler
Comment 5
2013-05-13 15:55:18 PDT
Comment on
attachment 201584
[details]
Fixes the bug Enrica already reviewed this. Sorry I was mixed up.
WebKit Commit Bot
Comment 6
2013-05-16 19:26:14 PDT
Re-opened since this is blocked by
bug 116257
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug