Sometimes NSUndoManager can get into an inconsistent state https://bugs.webkit.org/show_bug.cgi?id=116050

Reviewed by Enrica Casucci.

Always group undo items to work around a bug in NSUndoManager that manifests
when we call removeAllActionsWithTarget.

Source/WebKit/mac:

* WebCoreSupport/WebEditorClient.mm:
(WebEditorClient::registerUndoOrRedoStep):

Source/WebKit2:

* UIProcess/API/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::registerEditCommand):


Canonical link: https://commits.webkit.org/134467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150034 268f45cc-cd09-0410-ab3c-d52691b4dbfc